--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
+        <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mofan</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>emos-wx-api</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Spring Boot考勤系统</description>
     <properties>
         <java.version>11</java.version>
     </properties>
