--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# 配置tomcat
 server:
   tomcat:
     uri-encoding: UTF-8
@@ -10,6 +11,7 @@ server:
     context-path: /emos-wx-api
 
 spring:
+  # 配置MySQL数据源
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -24,6 +26,7 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+  # 配置redis
   redis:
     database: 0
     host: localhost
@@ -34,9 +37,24 @@ spring:
         max-wait: -1ms
         max-idle: 16
         min-idle: 8
+  # 配置mongodb
   data:
     mongodb:
       host: localhost
       port: 27017
       database: emos
       authentication-database: admin
+# 配置MyBatis
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.mofan.emos.wx.db.pojo
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+# 配置日志输出
+logging:
+  level:
+    root: info
+    com.example.emos.wx.db.dao: warn
+  pattern:
+    console: "%d{HH:mm:ss}  %-5level  %msg%n"
