--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mofan</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>emos-wx-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>emos-wx-api</name>
     <description>Spring Boot考勤系统</description>
@@ -78,6 +78,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
         </dependency>
     </dependencies>
 
